@@ -1,5 +1,6 @@
 package com.opencejav.LibMaster.utils.rules;
 
+import com.opencejav.LibMaster.exceptions.ValidationException;
 import lombok.Getter;
 import lombok.NonNull;
 import com.opencejav.LibMaster.utils.validation.Rule;
@@ -9,6 +10,11 @@ import java.util.function.Function;
 @Getter
 @SuppressWarnings("all") // TODO: Remove this suppression (for javadoc later)
 public class CheckIntegerRule<T> implements Rule<T> {
+    //region DEFAULT(S)
+    private static final Integer MIN_RANGE = Integer.MIN_VALUE;
+    private static final Integer MAX_RANGE = Integer.MAX_VALUE;
+    //endregion
+
     private final String fieldName;
     private final Function<T, Integer> fieldExtractor;
 
@@ -19,20 +25,29 @@ public class CheckIntegerRule<T> implements Rule<T> {
         this.fieldExtractor = fieldExtractor;
     }
 
-
-    // TODO: Implement Logic
     @Override
     public boolean validate(T obj) {
-        return true;
+        if (obj == null) return false;
+        if (this.fieldExtractor.apply(obj) == null) return false;
+
+        if (obj instanceof Integer value) {
+            return value >= 0 && value > MIN_RANGE && value < MAX_RANGE;
+        }
+
+        return false;
     }
 
     @Override
     public String message() {
-        return "Field '%s' must not be empty or null.".formatted(fieldName);
+        return String.format("The field '%s' must be a valid integer.", this.fieldName);
     }
 
     @Override
-    public Throwable throwIfInvalid() throws IllegalArgumentException {
-        throw new IllegalArgumentException(this.message());
+    public Throwable throwIfInvalid() throws ValidationException {
+        if(!validate((T) this)) {
+            throw new ValidationException(this.message());
+        }
+
+        return null;
     }
 }
